Added the Directories under the resource pages

--- a/resources.html
+++ b/resources.html
@@ -1013,7 +1013,7 @@
                             <div class="card">
                                 <p><strong>CN</strong> - Computer Network</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem 5/Computer_Network_6P403.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1030,7 +1030,7 @@
                                     Organization and Management
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem 5/Industrial_Organization_and_management_6G305.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
