Added Dark Color Pallatee
Added Dark Theme Toggle Button

--- a/index.html
+++ b/index.html
@@ -16,27 +16,22 @@
         <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-            rel="stylesheet"
-        />
+            rel="stylesheet" />
 
         <!-- Vendor CSS Files -->
         <link
             href="/src/vendor/bootstrap/css/bootstrap.min.css"
-            rel="stylesheet"
-        />
+            rel="stylesheet" />
         <link
             href="/src/vendor/bootstrap-icons/bootstrap-icons.css"
-            rel="stylesheet"
-        />
+            rel="stylesheet" />
         <link href="/src/vendor/aos/aos.css" rel="stylesheet" />
         <link
             href="/src/vendor/glightbox/css/glightbox.min.css"
-            rel="stylesheet"
-        />
+            rel="stylesheet" />
         <link
             href="/src/vendor/swiper/swiper-bundle.min.css"
-            rel="stylesheet"
-        />
+            rel="stylesheet" />
 
         <!-- Main CSS File -->
         <link rel="stylesheet" href="/src/css/color_palattee.css" />
@@ -45,8 +40,7 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-        />
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
         <link href="/src/css/temp.css" rel="stylesheet" />
     </head>
 
@@ -63,8 +57,7 @@
                         <img
                             src="/public/images/co_logo.webp"
                             class="logoimg"
-                            alt="CO Logo"
-                        />
+                            alt="CO Logo" />
                     </div>
 
                     <div class="menu-toggle" id="menuToggle">
@@ -79,14 +72,22 @@
                         <a id="Magazines" href="/magazines.html">Magazines</a>
                         <a id="Events" href="/events.html">Events</a>
                         <a id="Resources" href="/resources.html">Resources</a>
+                        <!-- Theme toggle button -->
+                        <div class="theme-toggle">
+                            <button
+                                id="themeButton"
+                                class="theme-button"
+                                aria-label="Toggle Dark Mode">
+                                <i id="themeIcon" class="fas fa-sun"></i>
+                            </button>
+                        </div>
                     </div>
 
                     <div class="logo">
                         <img
                             src="/public/images/ai_logo.webp"
                             class="logoimg"
-                            alt="AI Logo"
-                        />
+                            alt="AI Logo" />
                     </div>
                     <!-- </div> -->
                 </nav>
@@ -112,8 +113,7 @@
                     id="hero-carousel"
                     class="carousel carousel-fade"
                     data-bs-ride="carousel"
-                    data-bs-interval="5000"
-                >
+                    data-bs-interval="5000">
                     <div class="container position-relative">
                         <div class="carousel-item active">
                             <div class="eyeopen carousel-container">
@@ -179,24 +179,20 @@
                             class="eyeopen carousel-control-prev"
                             href="#hero-carousel"
                             role="button"
-                            data-bs-slide="prev"
-                        >
+                            data-bs-slide="prev">
                             <span
                                 class="carousel-control-prev-icon bi bi-chevron-left"
-                                aria-hidden="true"
-                            ></span>
+                                aria-hidden="true"></span>
                         </a>
 
                         <a
                             class="eyeopen carousel-control-next"
                             href="#hero-carousel"
                             role="button"
-                            data-bs-slide="next"
-                        >
+                            data-bs-slide="next">
                             <span
                                 class="carousel-control-next-icon bi bi-chevron-right"
-                                aria-hidden="true"
-                            ></span>
+                                aria-hidden="true"></span>
                         </a>
 
                         <ol class="eyeopen carousel-indicators"></ol>
@@ -212,20 +208,16 @@
                         <div
                             class="col-lg-4 col-md-6"
                             data-aos="fade-up"
-                            data-aos-delay="100"
-                        >
+                            data-aos-delay="100">
                             <div
-                                class="service-item item-cyan position-relative"
-                            >
+                                class="service-item item-cyan position-relative">
                                 <div class="icon">
                                     <i class="bi bi-airplane-engines-fill"></i>
                                 </div>
-                                <a
-                                    href="service-details.html"
-                                    class="stretched-link"
-                                >
+                                <p
+                                    class="stretched-link">
                                     <h3>Vision</h3>
-                                </a>
+                                </p>
                                 <p>
                                     To develop a community of innovation where
                                     students actively contribute to research,
@@ -239,20 +231,16 @@
                         <div
                             class="col-lg-4 col-md-6"
                             data-aos="fade-up"
-                            data-aos-delay="200"
-                        >
+                            data-aos-delay="200">
                             <div
-                                class="service-item item-orange position-relative"
-                            >
+                                class="service-item item-orange position-relative">
                                 <div class="icon">
                                     <i class="bi bi-flag-fill"></i>
                                 </div>
-                                <a
-                                    href="service-details.html"
-                                    class="stretched-link"
-                                >
+                                <p
+                                    class="stretched-link">
                                     <h3>Mission</h3>
-                                </a>
+                                </p>
                                 <p>
                                     To support students academically by
                                     providing resources and guidance, and
@@ -267,20 +255,16 @@
                         <div
                             class="col-lg-4 col-md-6"
                             data-aos="fade-up"
-                            data-aos-delay="300"
-                        >
+                            data-aos-delay="300">
                             <div
-                                class="service-item item-teal position-relative"
-                            >
+                                class="service-item item-teal position-relative">
                                 <div class="icon">
                                     <i class="bi bi-people-fill"></i>
                                 </div>
-                                <a
-                                    href="service-details.html"
-                                    class="stretched-link"
-                                >
+                                <p
+                                    class="stretched-link">
                                     <h3>Values</h3>
-                                </a>
+                                </p>
                                 <p>
                                     To promote honesty, encourage teamwork and
                                     creativity, and respect diverse perspectives
@@ -310,19 +294,16 @@
                         <div
                             class="col-md-5 d-flex align-items-center"
                             data-aos="zoom-out"
-                            data-aos-delay="100"
-                        >
+                            data-aos-delay="100">
                             <img
                                 src="/public/images/committee1.webp"
                                 class="img-fluid"
-                                alt=""
-                            />
+                                alt="" />
                         </div>
                         <div
                             class="col-md-7"
                             data-aos="fade-up"
-                            data-aos-delay="100"
-                        >
+                            data-aos-delay="100">
                             <h3>Teacher's Day Decoration</h3>
                             <p>
                                 Here's a photo from our Teacher's Day Decoration
@@ -338,19 +319,16 @@
                         <div
                             class="col-md-5 order-1 order-md-2 d-flex align-items-center"
                             data-aos="zoom-out"
-                            data-aos-delay="200"
-                        >
+                            data-aos-delay="200">
                             <img
                                 src="/public/images/committee2.webp"
                                 class="img-fluid"
-                                alt=""
-                            />
+                                alt="" />
                         </div>
                         <div
                             class="col-md-7 order-2 order-md-1"
                             data-aos="fade-up"
-                            data-aos-delay="200"
-                        >
+                            data-aos-delay="200">
                             <h3>All Members of Committee</h3>
                             <p>
                                 This picture was taken after the successful
@@ -366,13 +344,11 @@
                     <div class="row gy-4 align-items-center features-item">
                         <div
                             class="col-md-5 d-flex align-items-center"
-                            data-aos="zoom-out"
-                        >
+                            data-aos="zoom-out">
                             <img
                                 src="/public/images/committee3.webp"
                                 class="img-fluid"
-                                alt=""
-                            />
+                                alt="" />
                         </div>
                         <div class="col-md-7" data-aos="fade-up">
                             <h3>Committee Establishment</h3>
@@ -390,18 +366,15 @@
                     <div class="row gy-4 align-items-center features-item">
                         <div
                             class="col-md-5 order-1 order-md-2 d-flex align-items-center"
-                            data-aos="zoom-out"
-                        >
+                            data-aos="zoom-out">
                             <img
                                 src="/public/images/committee4.webp"
                                 class="img-fluid"
-                                alt=""
-                            />
+                                alt="" />
                         </div>
                         <div
                             class="col-md-7 order-2 order-md-1"
-                            data-aos="fade-up"
-                        >
+                            data-aos="fade-up">
                             <h3>Dussehra 2k24 Decoration</h3>
                             <p>
                                 On behalf of Dussehra Event, we decorated the
@@ -445,6 +418,35 @@
         <!-- Scripts -->
         <script>
             $("#footer").load("/src/pages/footer.html");
+        </script>
+        <script>
+            const themeButton = document.getElementById("themeButton");
+            const themeIcon = document.getElementById("themeIcon");
+            const body = document.body;
+
+            // Load theme from local storage
+            const currentTheme = localStorage.getItem("theme") || "light";
+            if (currentTheme === "dark") {
+                body.setAttribute("data-theme", "dark");
+                themeIcon.className = "fas fa-moon";
+            } else {
+                themeIcon.className = "fas fa-sun";
+            }
+
+            themeButton.addEventListener("click", () => {
+                const newTheme =
+                    body.getAttribute("data-theme") === "dark"
+                        ? "light"
+                        : "dark";
+                body.setAttribute("data-theme", newTheme);
+                localStorage.setItem("theme", newTheme);
+
+                if (newTheme === "dark") {
+                    themeIcon.className = "fas fa-moon";
+                } else {
+                    themeIcon.className = "fas fa-sun";
+                }
+            });
         </script>
         <script type="module" src="/src/js/main.js"></script>
         <script type="module" src="/src/js/temp.js"></script>
