--- a/src/pages/resources/Machine_Learning_6N502.html
+++ b/src/pages/resources/Machine_Learning_6N502.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -61,10 +61,10 @@
                     <span class="tag">CODE123</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
                     <strong>Category:</strong> <span class="tag">Degree</span>
                 </div>
@@ -108,11 +108,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
@@ -124,8 +125,9 @@
                     <h3>Curriculum</h3>
                     <div class="sub-section">
                         <div class="pdf-container">
+                            <!-- https://drive.google.com/file/d/1l5QXDdcIJkr9QYuBfhLCGlnU9nayaNFP/view?usp=drive_link -->
                             <img
-                                src="pdf-preview.jpg"
+                                src="https://drive.google.com/thumbnail?id=1l5QXDdcIJkr9QYuBfhLCGlnU9nayaNFP"
                                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
@@ -438,7 +440,7 @@
                     If you have additional material to contribute, please use
                     the form below:
                 </p>
-                <a href="https://forms.gle/example" class="button"
+                <a href="https://forms.gle/UN2cS6kE7yuGG9xk8" class="button"
                     >Upload via Google Form</a
                 >
             </section>
