--- a/src/pages/resources/subject_page_template.html
+++ b/src/pages/resources/subject_page_template.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -60,14 +60,13 @@
                     <strong>Subject Code:</strong>
                     <span class="tag">CODE123</span>
                 </p>
-                <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
-                </div>
                 <p>
+                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </p>
-                <div>
+                <p>
                     <strong>Category:</strong> <span class="tag">Degree</span>
-                </div>
+                </p>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
 
@@ -108,11 +107,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
@@ -414,7 +414,7 @@
                 <div class="horizontal-scroll">
                     <div class="pdf-container">
                         <img
-                            src="pdf-preview.jpg"
+                            src="../../../public/images/"
                             onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
                         <p class="pdf-title">Video Title</p>
@@ -438,7 +438,7 @@
                     If you have additional material to contribute, please use
                     the form below:
                 </p>
-                <a href="https://forms.gle/example" class="button"
+                <a href="https://forms.gle/UN2cS6kE7yuGG9xk8" class="button"
                     >Upload via Google Form</a
                 >
             </section>
