second year- 3rd semister resources page have been updated

--- a/resources.html
+++ b/resources.html
@@ -555,11 +555,10 @@
                             <h4 class="semester">Semester 3 (CO)</h4>
                             <div class="card">
                                 <p>
-                                    <strong>CHMT</strong> - Computer Hardware &
-                                    Maintenance with Troubleshooting
+                                    <strong>DMK</strong> - Digital Marketing
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/second-year/DMK-7G705.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -571,25 +570,9 @@
                             data-year="year2"
                             style="display: none">
                             <div class="card">
-                                <p><strong>DE</strong> - Digital Electronics</p>
+                                <p><strong>RDB</strong> - Relational Database Management System</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
-                                    class="download-btn"
-                                    >Visit Page</a
-                                >
-                            </div>
-                        </div>
-                        <div
-                            class="subject-card"
-                            data-branch="CO"
-                            data-year="year2"
-                            style="display: none">
-                            <div class="card">
-                                <p>
-                                    <strong>MT</strong> - Multimedia Techniques
-                                </p>
-                                <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/second-year/RDB-7R109.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -602,11 +585,10 @@
                             style="display: none">
                             <div class="card">
                                 <p>
-                                    <strong>OOP-CPP</strong> - Object Oriented
-                                    Programming using C++
+                                    <strong>OSY</strong> - Operating System
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/second-year/OSY-7R113.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -619,11 +601,10 @@
                             style="display: none">
                             <div class="card">
                                 <p>
-                                    <strong>RDBMS</strong> - Relational Database
-                                    Management Systems
+                                    <strong>DTM</strong> - Digital Techniques and Microprocessor
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/second-year/DTM-7R502.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -636,10 +617,42 @@
                             style="display: none">
                             <div class="card">
                                 <p>
-                                    <strong>SE</strong> - Software Engineering
+                                    <strong>PWP</strong> - Programming in Python
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/second-year/PWP-7R503.html"
+                                    class="download-btn"
+                                    >Visit Page</a
+                                >
+                            </div>
+                        </div>
+                        <div
+                            class="subject-card"
+                            data-branch="CO"
+                            data-year="year2"
+                            style="display: none">
+                            <div class="card">
+                                <p>
+                                    <strong>OOJ</strong> - Object Oriented Programming Using JAVA
+                                </p>
+                                <a
+                                    href="./src/pages/resources/second-year/OOJ-7R604.html"
+                                    class="download-btn"
+                                    >Visit Page</a
+                                >
+                            </div>
+                        </div>
+                        <div
+                            class="subject-card"
+                            data-branch="CO"
+                            data-year="year2"
+                            style="display: none">
+                            <div class="card">
+                                <p>
+                                    <strong>APD</strong> - Advanced Personality Development
+                                </p>
+                                <a
+                                    href="./src/pages/resources/second-year/APD-7G303.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
